# SWMM_xsections_shape_generator

./: .gitattributes  CITATION.cff  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  show_case-kasten.ipynb  show_case.ipynb
_make_docs/: api.rst  api.rst.OLD  api_class.inc  api_class.rst  api_examples.inc  api_examples.rst  api_helpers.inc  api_helpers.rst  conf.py  index.rst  install.md  main.rst  make_html.sh  show_case-kasten.ipynb  show_case.ipynb  show_case_swmm_standard.ipynb  standard_cross_section.ipynb
_make_docs/images/: linear.dxf
docs/: .buildinfo  api_class.html  api_examples.html  api_helpers.html  conf.py  genindex.html  index.html  install.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js  show_case-kasten.html  show_case-kasten.ipynb  show_case.html  show_case.ipynb  show_case_swmm_standard.html  show_case_swmm_standard.ipynb  standard_cross_section.html  standard_cross_section.ipynb
docs/_images/: profile.odg
docs/_modules/: index.html
docs/_modules/shape_generator/: example_cross_sections.html  helpers.html  shape_generator.html  shape_generator_holding.html
docs/_sources/: api_class.rst.txt  api_helpers.rst.txt  install.md.txt  show_case-kasten.ipynb.txt  show_case.ipynb.txt  standard_cross_section.ipynb.txt
docs/_static/: documentation_options.js
docs/doctrees/: api.doctree  api_class.doctree  api_examples.doctree  api_helpers.doctree  index.doctree  install.doctree  main.doctree  show_case-kasten.doctree  show_case.doctree  show_case_swmm_standard.doctree  standard_cross_section.doctree
docs/doctrees/nbsphinx/: show_case.ipynb  (+2 more)
docs/html/: .buildinfo  api.html  api_class.html  api_examples.html  api_helpers.html  genindex.html  index.html  install.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js  show_case-kasten.html  show_case-kasten.ipynb  show_case.html  show_case_swmm_standard.html  show_case_swmm_standard.ipynb  standard_cross_section.html  standard_cross_section.ipynb
docs_make/: index.rst
shape_generator/: __init__.py  converter_swmm_api.py  curve_simplification.py  example_cross_sections.py  helpers.py  profile_gen.py  profile_helpers.py  shape_generator.py  shape_generator_OLD.py  shape_generator_holding.py  swmm_predefined.py  swmm_std_cross_section_curves.json  swmm_std_cross_sections.py
(+24 files in other folders)
