[metadata]
name = SWMM_xsections_shape_generator
version = 0.3.4

url = https://github.com/MarkusPic/SWMM_xsections_shape_generator
project_urls =
    Documentation = https://markuspic.github.io/SWMM_xsections_shape_generator/
license = MIT
license_file = LICENSE
author = Markus Pichler
author_email = markus.pichler@tugraz.at
description = US-EPA SWMM Cross-Section curve shape generator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English

keywords =
    swmm
    environment
    civil_engineering
    api

[options]
python_requires = >= 3.6
packages =
    shape_generator
install_requires =
    numpy

[options.extras_require]
pandas = pandas
sympy = sympy
swmm-api = swmm-api
matplotlib = matplotlib