[metadata]
name = SWMM_xsections_shape_generator
version = 0.7.post2

url = https://github.com/MarkusPic/SWMM_xsections_shape_generator
project_urls =
    Documentation = https://markuspic.github.io/SWMM_xsections_shape_generator/


license = MIT
license_file = LICENSE
author = Markus Pichler
author_email = markus.pichler@tugraz.at
description = US-EPA SWMM Cross-Section curve shape generator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research


keywords =
    swmm
    environment
    civil_engineering

[options]
python_requires = >= 3.7
include_package_data = True
packages =
    shape_generator
install_requires =
    numpy

[options.extras_require]
pandas = pandas
sympy = sympy
swmm-api = swmm-api>=0.3
matplotlib = matplotlib